# attenuation

./: pyproject.toml
src/attenuation/: __init__.py
src/attenuation/cli/: main.py
src/attenuation/core/: enums.py  registry.py  units.py
