[project]
name = "attenuation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pint>=0.25",
    "pyarrow>=21.0.0",
    "typer>=0.17.3",
]

[project.scripts]
attenuation = "attenuation:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
